lab3/frontend_ingress_manifest.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-rs-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - secretName: frontend-rs-secret
      hosts:
        - front.vladlen.com
  rules:
    - host: front.vladlen.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: frontend-rs-service
                port:
                  number: 9090
